test/patterns/s0045_jump_game_ii/hafis/starchat/jml_syntax_checking.txt
./test/s0045_jump_game_ii/hafis/starchat/Solution.java:13: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 1000) && (nums >= 0)));
                                                         ^
  first type:  int[]
  second type: int
./test/s0045_jump_game_ii/hafis/starchat/Solution.java:13: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 1000) && (nums >= 0)));
                                                                           ^
  first type:  int[]
  second type: int
2 errors
